# TTSOSE

./: .gitignore  README.md  add.py  app.py  auto_download.py  pyproject.toml  reconcile_bills.py  启动视频下载工具.bat
.github/workflows/: android_build.yml  stock_scan.yml
beeco/: .gitignore  BUILD.md  FILELIST.md  README.md  pubspec.yaml
beeco/android/: build.gradle
beeco/android/app/: build.gradle  proguard-rules.pro
beeco/android/app/src/main/: AndroidManifest.xml
beeco/android/app/src/main/kotlin/com/beeco/app/: MainActivity.kt
beeco/android/app/src/main/res/mipmap-hdpi/: .gitkeep
beeco/android/app/src/main/res/values/: strings.xml
beeco/lib/: main.dart
beeco/lib/data/: dao.dart  database_helper.dart
beeco/lib/models/: models.dart
beeco/lib/pages/: home_page.dart  login_page.dart  main_page.dart  settings_page.dart  stats_page.dart
beeco/lib/providers/: app_providers.dart  auth_provider.dart
beeco/lib/theme/: app_theme.dart
beeco/lib/widgets/: animated_background.dart  logo_widget.dart
beeco/test/: widget_test.dart
static/: script.js  style.css
templates/: index.html
记帐鸭/WasteBook-master/: build.gradle
